--- a/index.html
+++ b/index.html
@@ -40,87 +40,89 @@
             <div class="big-weaver">
                 <!-- flags news -->
                 <!-- 1 -->
-                <div class="flags-news-reaper">
-                    <a href="germany.html"><img class="flags-news-img" src="img/german.png" alt="#" height="160"></a>
-                    <div class="flags-child-reaper">
-                        <a class="flags-news-text" href="germany.html">Germany</a>
-                        <p class="flags-news-child-text">Population: 81,770,900</p>
-                        <p class="flags-news-child-text">Region: Europe</p>
-                        <p class="flags-news-child-text">Capital: Berlin</p>
+            <ul class="flags-reapper-ul">
+                            <li class="flags-news-reaper">
+                                             <a href="germany.html"><img class="flags-news-img" src="img/german.png" alt="#" height="160"></a>
+                    <div class="flags-reaper-div">
+                                   <a class="flags-news-text" href="germany.html">Germany</a>
+                                        <p class="flags-news-child-text">Population: 81,770,900</p>
+                                        <p class="flags-news-child-text">Region: Europe</p>
+                                        <p class="flags-news-child-text">Capital: Berlin</p>
                     </div>
-                </div>
-                <!-- 2 -->
-                <div class="flags-news-reaper">
-                    <a href="america.html"><img class="flags-news-img" src="img/america.svg.png" alt="#"
-                            height="160"></a>
-                    <div class="flags-child-reaper">
-                        <a class="flags-news-text" href="america.html">United States of America</a>
-                        <p class="flags-news-child-text">Population: 323,947,000</p>
-                        <p class="flags-news-child-text">Region: Americas</p>
-                        <p class="flags-news-child-text">Capital: Washington, D.C.</p>
+                            </li>
+                            <!-- 2 -->
+                            <li class="flags-news-reaper">
+                    <a href="america.html"><img class="flags-news-img" src="img/america.svg.png" alt="#" height="160"></a>
+                    <div class="flags-reaper-div">
+                                    <a href="america.html"><img class="flags-news-img" src="img/america.svg.png" alt="#"
+                                            height="160"></a>
+                             <a class="flags-news-text" href="america.html">United States of America</a>
+                                        <p class="flags-news-child-text">Population: 323,947,000</p>
+                                        <p class="flags-news-child-text">Region: Americas</p>
+                                        <p class="flags-news-child-text">Capital: Washington, D.C.</p>
                     </div>
-                </div>
-                <!-- 3 -->
-                <div class="flags-news-reaper">
-                    <a href="brazil.html"><img class="flags-news-img" src="img/brazil.png" alt="#" height="160"></a>
-                    <div class="flags-child-reaper">
-                        <a class="flags-news-text" href="brazil.html">Brazil</a>
-                        <p class="flags-news-child-text">Population: 206,135,893</p>
-                        <p class="flags-news-child-text">Region: Americas</p>
-                        <p class="flags-news-child-text">Capital: Brasília</p>
+                                </li>
+                            <!-- 3 -->
+                            <li class="flags-news-reaper">
+                              <a href="brazil.html"><img class="flags-news-img" src="img/brazil.png" alt="#" height="160"></a>
+                    <div class="flags-reaper-div">
+                                 <a class="flags-news-text" href="brazil.html">Brazil</a>
+                                        <p class="flags-news-child-text">Population: 206,135,893</p>
+                                        <p class="flags-news-child-text">Region: Americas</p>
+                                        <p class="flags-news-child-text">Capital: Brasília</p>
                     </div>
-                </div>
-                <!-- 4 -->
-                <div class="flags-news-reaper">
-                    <a href="iceland.html"><img class="flags-news-img" src="img/icenland.png" alt="#" height="160"></a>
-                    <div class="flags-child-reaper">
-                        <a class="flags-news-text" href="iceland.html">Iceland</a>
-                        <p class="flags-news-child-text">Population: 334,300</p>
-                        <p class="flags-news-child-text">Region: Europe</p>
-                        <p class="flags-n ews-child-text">Capital: Reykjavík</p>
+                                </li>
+                            <!-- 4 -->
+                            <li class="flags-news-reaper">
+                                <a href="iceland.html"><img class="flags-news-img" src="img/icenland.png" alt="#" height="160"></a>
+                    <div class="flags-reaper-div">
+                                    <a class="flags-news-text" href="iceland.html">Iceland</a>
+                                        <p class="flags-news-child-text">Population: 334,300</p>
+                                        <p class="flags-news-child-text">Region: Europe</p>
+                                        <p class="flags-n ews-child-text">Capital: Reykjavík</p>
+                                </li>
+                                        </div>
+                                        <div class="flags-bottom-reaper">
+                                                            <li class="flags-news-reaper">
+                                                                    <a href="afghanistan.html"><img class="flags-news-img" src="img/Afghanistan.png" alt="#"
+                                            height="160"></a>
+                    <div class="flags-reaper-div">
+                                                                   <a class="flags-news-text" href="afghanistan.html">Afghanistan</a>
+                                        <p class="flags-news-child-text">Population: 27,657,145</p>
+                                        <p class="flags-news-child-text">Region: Asia</p>
+                                        <p class="flags-news-child-text">Capital: Kabul</p>
                     </div>
-                </div>
-            </div>
-            <div class="flags-bottom-reaper">
-                <div class="flags-news-reaper">
-                    <a href="afghanistan.html"><img class="flags-news-img" src="img/Afghanistan.png" alt="#"
-                            height="160"></a>
-                    <div class="flags-child-reaper">
-                        <a class="flags-news-text" href="afghanistan.html">Afghanistan</a>
-                        <p class="flags-news-child-text">Population: 27,657,145</p>
-                        <p class="flags-news-child-text">Region: Asia</p>
-                        <p class="flags-news-child-text">Capital: Kabul</p>
+                                                            </li>
+                                                            <li class="flags-news-reaper">
+                                                                    <a href="aland-iceland.html"><img class="flags-news-img" src="img/Ålan-Islands.png" alt="#"
+                                            height="160"></a>
+                    <div class="flags-reaper-div">
+                                                                   <a class="flags-news-text" href="aland-iceland.html">Åland Islands</a>
+                                        <p class="flags-news-child-text">Population: 28,875</p>
+                                        <p class="flags-news-child-text">Region: Europe</p>
+                                        <p class="flags-news-child-text">Capital: Mariehamn</p>
                     </div>
-                </div>
-                <div class="flags-news-reaper">
-                    <a href="aland-iceland.html"><img class="flags-news-img" src="img/Ålan-Islands.png" alt="#"
-                            height="160"></a>
-                    <div class="flags-child-reaper">
-                        <a class="flags-news-text" href="aland-iceland.html">Åland Islands</a>
-                        <p class="flags-news-child-text">Population: 28,875</p>
-                        <p class="flags-news-child-text">Region: Europe</p>
-                        <p class="flags-news-child-text">Capital: Mariehamn</p>
+                                                                </li>
+                                                            <li class="flags-news-reaper">
+                                                               <a href="albania.html"><img class="flags-news-img" src="img/Albania.png" alt="#" height="160"></a>
+                    <div class="flags-reaper-div">
+                                                                   <a class="flags-news-text" href="albania.html">Albania</a>
+                                        <p class="flags-news-child-text">Population: 2,886,026</p>
+                                        <p class="flags-news-child-text">Region: Europe</p>
+                                        <p class="flags-news-child-text">Capital: Tirana</p>
                     </div>
-                </div>
-                <div class="flags-news-reaper">
-                    <a href="albania.html"><img class="flags-news-img" src="img/Albania.png" alt="#" height="160"></a>
-                    <div class="flags-child-reaper">
-                        <a class="flags-news-text" href="albania.html">Albania</a>
-                        <p class="flags-news-child-text">Population: 2,886,026</p>
-                        <p class="flags-news-child-text">Region: Europe</p>
-                        <p class="flags-news-child-text">Capital: Tirana</p>
-                    </div>
-                </div>
-                <div class="flags-news-reaper">
-                    <a href="algeria.html"><img class="flags-news-img" src="img/algeria.png" alt="#" height="160"></a>
-                    <div class="flags-child-reaper">
-                        <a class="flags-news-text" href="algeria.html">Algeria</a>
-                        <p class="flags-news-child-text">Population: 40,400,000</p>
-                        <p class="flags-news-child-text">Region: Africa</p>
-                        <p class="flags-news-child-text">Capital: Algiers</p>
-                    </div>
-                </div>
-            </div>
+                                                                </li>
+                                                            <li class="flags-news-reaper">
+                                                            <a href="algeria.html"><img class="flags-news-img" src="img/algeria.png" alt="#" height="160"></a>
+                    <div class="flags-reaper-div">
+                                                                   <a class="flags-news-text" href="algeria.html">Algeria</a>
+                                        <p class="flags-news-child-text">Population: 40,400,000</p>
+                                        <p class="flags-news-child-text">Region: Africa</p>
+                                        <p class="flags-news-child-text">Capital: Algiers</p>
+                                                                </li>
+                                                    </div>
+                </li>
+            </ul>
         </div>
     </main>
     <script src="js/app.js"></script>
