Add afganistan html

--- a/afghanistan.html
+++ b/afghanistan.html
@@ -50,9 +50,11 @@
                     </div>
                     <div class="state-bottom-reaper">
                         <p class="state-bottom-text">Border Countries:</p>
-                        <button class="state-button"> China</button>
-                        <button class="state-button">Pakistan</button>
-                        <button class="state-button">Uzbekistan</button>
+                        <div class="state-bottom-text-reaper">
+                            <button class="state-button"> China</button>
+                            <button class="state-button">Pakistan</button>
+                            <button class="state-button">Uzbekistan</button>
+                        </div>
                     </div>
                 </div>
             </div>
