Add changes html

--- a/aland-iceland.html
+++ b/aland-iceland.html
@@ -50,9 +50,11 @@
                     </div>
                     <div class="state-bottom-reaper">
                         <p class="state-bottom-text">Border Countries:</p>
-                        <button class="state-button">Sweden</button>
-                        <button class="state-button">Canada</button>
-                        <button class="state-button">Belgium</button>
+                        <div class="state-bottom-text-reaper">
+                            <button class="state-button">Sweden</button>
+                            <button class="state-button">Canada</button>
+                            <button class="state-button">Belgium</button>
+                        </div>
                     </div>
                 </div>
             </div>
