--- a/albania.html
+++ b/albania.html
@@ -48,9 +48,11 @@
                     </div>
                     <div class="state-bottom-reaper">
                         <p class="state-bottom-text">Border Countries:</p>
-                        <button class="state-button">North Macedonia</button>
-                        <button class="state-button">Montenegro</button>
-                        <button class="state-button"> Greece</button>
+                        <div class="state-bottom-text-reaper">
+                            <button class="state-button">North Macedonia</button>
+                            <button class="state-button">Montenegro</button>
+                            <button class="state-button"> Greece</button>
+                        </div>
                     </div>
                 </div>
             </div>
