add algeria html

--- a/algeria.html
+++ b/algeria.html
@@ -48,9 +48,11 @@
                     </div>
                     <div class="state-bottom-reaper">
                         <p class="state-bottom-text">Border Countries:</p>
-                        <button class="state-button">Morocco.</button>
-                        <button class="state-button"> South with Niger</button>
-                        <button class="state-button">Tunisia</button>
+                        <div class="state-bottom-text-reaper">
+                            <button class="state-button">Morocco.</button>
+                            <button class="state-button"> South with Niger</button>
+                            <button class="state-button">Tunisia</button>
+                        </div>
                     </div>
                 </div>
             </div>
