add america html

--- a/america.html
+++ b/america.html
@@ -48,9 +48,11 @@
                     </div>
                     <div class="state-bottom-reaper">
                         <p class="state-bottom-text">Border Countries:</p>
-                        <button class="state-button">Pacific Ocean</button>
-                        <button class="state-button">Canada</button>
-                        <button class="state-button">Mexico</button>
+                        <div class="state-bottom-text-reaper">
+                            <button class="state-button">Pacific Ocean</button>
+                            <button class="state-button">Canada</button>
+                            <button class="state-button">Mexico</button>
+                        </div>
                     </div>
                 </div>
             </div>
