--- a/brazil.html
+++ b/brazil.html
@@ -48,9 +48,11 @@
                     </div>
                     <div class="state-bottom-reaper">
                         <p class="state-bottom-text">Border Countries:</p>
-                        <button class="state-button">Urugvay</button>
-                        <button class="state-button">Colombia</button>
-                        <button class="state-button">Paraguay</button>
+                        <div class="state-bottom-text-reaper">
+                            <button class="state-button">Urugvay</button>
+                            <button class="state-button">Colombia</button>
+                            <button class="state-button">Paraguay</button>
+                        </div>
                     </div>
                 </div>
             </div>
