add departmen html

--- a/departmen.html
+++ b/departmen.html
@@ -48,9 +48,11 @@
                     </div>
                     <div class="state-bottom-reaper">
                         <p class="state-bottom-text">Border Countries:</p>
-                        <button class="state-button">France</button>
-                        <button class="state-button">Germany</button>
-                        <button class="state-button">Netherlands</button>
+                        <div class="state-bottom-text-reaper">
+                            <button class="state-button">France</button>
+                            <button class="state-button">Germany</button>
+                            <button class="state-button">Netherlands</button>
+                        </div>
                     </div>
                 </div>
             </div>
