add germany html

--- a/germany.html
+++ b/germany.html
@@ -17,7 +17,7 @@
                         <a class="header-button" href="index.html">Dark Mode</a>
                     </div>
                 </div>
-            </div>
+            </div>  
         </div>
     </header>
     <main>
@@ -40,7 +40,7 @@
                             <p class="state-text">Sub Region: Western Europe</p>
                             <p class="state-text">Capital:Berlin</p>
                         </div>
-                        <div>
+                        <div class="state-child-top-reaper">
                             <p class="state-text">Top Level Domain: .be</p>
                             <p class="state-text">Currencies: Euro</p>
                             <p class="state-text">Languages: Dutch, French, Belgium</p>
@@ -48,9 +48,11 @@
                     </div>
                     <div class="state-bottom-reaper">
                         <p class="state-bottom-text">Border Countries:</p>
-                        <button class="state-button">Netherlands</button>
-                        <button class="state-button">Belgium</button>
-                        <button class="state-button">France</button>
+                        <div class="state-bottom-text-reaper">
+                            <button class="state-button">Netherlands</button>
+                            <button class="state-button">Belgium</button>
+                            <button class="state-button">France</button>
+                        </div>
                     </div>
                 </div>
             </div>
