--- a/iceland.html
+++ b/iceland.html
@@ -27,7 +27,7 @@
               <a class="state-link" href="index.html">Back</a>
             </div> 
             <div class="wrapper-reaper">
-            <div>
+            <div class="state-img-reaper">
                 <img class="state-img" src="img/icenland-big-img.jpg" alt="#">
             </div>
                 <div class="wrapper-reaper-text">
@@ -48,9 +48,11 @@
                     </div>
                     <div class="state-bottom-reaper">
                         <p class="state-bottom-text">Border Countries:</p>
-                        <button class="state-button"> Greenland</button>
-                        <button class="state-button"> Norway</button>
-                        <button class="state-button"> United Kingdom</button>
+                        <div class="state-bottom-text-reaper">
+                            <button class="state-button"> Greenland</button>
+                            <button class="state-button"> Norway</button>
+                            <button class="state-button"> United Kingdom</button>
+                        </div>
                     </div>
                 </div>
             </div>
